[package]
name = "multigraphrs"
version = "0.1.1"
edition = "2024"
authors = ["Șoiman Vasile-Cristian <vasilecristiansoiman@gmail.com"]
description = "A versatile, strategy-pattern based MultiGraph library supporting directed, undirected, and weighted graphs."
license = "MIT"
repository = "https://github.com/yourusername/multigraphrs"
readme = "README.md"

[dependencies]
